# MBX

./: compile.sh
plugins/i-pi/src/main/: infrared.cpp
plugins/i-pi/src/utils/: perturb.cpp  perturb.h
src/bblock/: sys_tools.cpp  system.cpp
src/potential/1b/: CMakeLists.txt  energy1b.cpp  energy1b.h  mbnrg_1b_A1B3_deg5_v1.cpp  mbnrg_1b_A1B3_deg5_v1.h  poly_1b_A1B3_deg5_grad_v1.cpp  poly_1b_A1B3_deg5_nograd_v1.cpp  poly_1b_A1B3_deg5_v1.cpp  poly_1b_A1B3_deg5_v1.h  poly_1b_A1B3_deg5_v1x.cpp  poly_1b_A1B3_deg5_v1x.h  x1b_A1B3_deg5_v1x.cpp  x1b_A1B3_deg5_v1x.h  x1b_A1B4_deg5_exp0_v1x.cpp
src/potential/2b/: CMakeLists.txt  energy2b.cpp  energy2b.h  mbnrg_2b_A1B3_A1B3_deg4_v1.cpp  mbnrg_2b_A1B3_A1B3_deg4_v1.h  poly_2b_A1B2_C1D3_deg5_v1.cpp  poly_2b_A1B2_C1D3_deg5_v1x.cpp  poly_2b_A1B2_C1D3_deg5_v1x.h  poly_2b_A1B3_A1B3_deg4_grad_v1.cpp  poly_2b_A1B3_A1B3_deg4_nograd_v1.cpp  poly_2b_A1B3_A1B3_deg4_v1.h  x2b_A1B2_C1D3_deg5_v1x.cpp  x2b_A1B2_C1D3_deg5_v1x.h
src/potential/buckingham/: bucktools.cpp
src/potential/dispersion/: dispersion2b.cpp  disptools.cpp
src/tests/: energy_wgrad-test.cpp
tests/molecular-ions/two-body/no3-h2o/: reference_poly_output.txt  test.nrg
